css/base/_general.scss
/* ... */
body { 
  font-size: 1.6em; /* currently ems cause chrome bug misinterpreting rems on body element */
  line-height: 1.8;
  font-family: $regular;
  color: $black;
  -webkit-font-smoothing: antialiased; // Fix fonts looking rubbish in Chrome
  background: $white;
  letter-spacing: 0.25px;
}

h1, h2, h3, h4 {
  font-family: $regular;
  font-kerning: normal;
  color: $black;
}

@media (max-width: $breakpoint-tablet) {
  .flex {
    display: flex;
    flex-flow: column;
    aside {
      order: 2;
      margin-top: $padding-half;
    }
    .content {
      order: 1;
    }
  }
}

// Page 
section {
  &.page, &.post, &.search {
    &.single_post {
      margin-top: 0;
    }
    
    font: $normal 2rem/3.6rem $regular;
    font-size: 2rem;
    line-height: 3.6rem;
    @media (min-width: $breakpoint-tablet) {
      font: $normal 2.6rem/4rem $regular;
      font-size: 2.6rem;
      line-height: 4rem;
    }
    .content {
      padding: 20px 0px;
      @media (min-width: $breakpoint-tablet) {
        padding: 40px 0px;
      }
      hr {
        clear: both;
        color: #dedede;
        margin: 30px 0;
        border-bottom: 0;
        border-top: 1px solid #dedede;
      }
    }
    article.profile {
      margin-bottom: $padding;
      img {
        margin-top: $padding-quarter;
      }
      &:nth-child(3n+4) {
        margin-left: 0;
        clear: left;
      }
    }
    &.no_hero {
      // padding: $padding-half 0px;
      margin-top: 90px;
      @media (min-width: $breakpoint-tablet) {
        // padding: $padding 0px;
      }
      aside {
        margin-top: 0;
      }
    }
    &.bg {
      margin-top: 0;
    }
  }
  p.jump {
    margin: 0 0 10px 0;
    font: $bold 1.5rem/1.5rem $regular;
  }
  ul.jump {
    margin: 0px 0 20px 0;
    li {
      margin: 5px;
      display: inline-block;
      a {
        display: block;
        border: 2px solid $blue;
        font: $bold 1.5rem/1.5rem $regular;
        padding: 8px 15px;
        text-decoration: none;
        &:hover {
          background: $blue;
          color: $white;
        }
      }
    }
  }
  article.person, {
    margin: 20px 0;
  }
  article.country {
    margin: 10px 0;
  }
  h1, h2, h3 {
    font-family: $regular;
    color: $black;
  }
  h1 {
    font: $xbold 3.6rem/5rem $regular;
    margin-bottom: 10px;
    font-size: 3.6rem;
  }
  h2 {
    font: $xbold 2.8rem/3.6rem $regular;
    margin-bottom: 10px;
    font-size: 2.8rem;
    line-height: 3.8rem;
  }
  h3 {
    font: $xbold 2.2rem/3.0rem $regular;
    margin-bottom: 10px;
    font-size: 2.2rem;
  }
  h4 {
    font: $xbold 2rem/2.8rem $regular;
    margin-bottom: 10px;
    font-size: 2rem;
  }
  h5 {
    font: $xbold 1.8rem/2.6rem $regular;
    margin-bottom: 10px;
    font-size: 1.8rem;
  }
  p {
    &.lead {
      font: $normal 1.8rem/2.8rem $regular;
    }
    &.center {
      text-align: center;
    }
  }
  b, strong {
    font-weight: bold;
  }
  em, i {
    font-style: italic;
  }
  a {
    color: $blue;
    text-decoration: underline;
    text-decoration-color: $blue;
    &:hover {
      color: $green;
      text-decoration: none;
    }
  }
  ul {
    font: $normal 1.8rem/2.8rem $regular;
    margin: 20px 0px;
    li {
      list-style: disc;
      list-style-position: outside;
      margin-left: 20px;
      font: $normal 1.8rem/3.4rem $regular;
    }
    ul {
      margin: 10px 0px;
    }
  }
  ol {
    font: $normal 1.8rem/2.8rem $regular;
    margin: 20px 0px;
    li {
      list-style: decimal;
      list-style-position: outside;
      margin-left: 20px;
    }
  }
  table {
    border: 1px solid $border;
    overflow-x: scroll;
    font: $normal 1.6rem/2.6rem $regular;
    width: 100%;
    table-layout: auto;
    border-collapse: separate !important;
    p, ul {
      font: $normal 1.6rem/2.6rem $regular;
    }
    th {
      color: $white;
      font: $regular 1.8rem/2.6rem $regular !important;
      padding: 20px;
      background: $blue;
      text-align: left;
      border-right: 1px solid $white;
      &:last-child {
        border-right: none;
      }
    }

    tr {
      td {
        padding: 20px;
        border-left: 1px solid $border;
        &:first-child {
          border-left: none;
        }
      }
      &:nth-child(odd) {
        td {
          background: $white-bg;
        }
      }
      &:first-child {
        td {
          background: $white;
        }
      }
    }
  }
  
  blockquote {
    display: inline-block;
    position: relative; 
    padding: 20px 40px;
    color: $black;
    margin: 20px 0;
    font: $light 2.4rem/3.4rem $regular;
    &:before, &:after{
      font-family: Arial, sans-serif;
      position: absolute;
      color: $black;
      font-size:80px;
    }
    p {
      font: $light 1.8rem/2.8rem $regular;
      @media (min-width: $breakpoint-tablet) {
        font: $light 2.4rem/3.4rem $regular;
      }
    }
    &:before{
      content: "“";        
      top: 20px;
      left: 0;
    }
    &:after{
      content: "”";
      right: 0;
      bottom: -20px;
    }
  }
}

.resources {
  border-top: 10px solid #666;
  background: #F8F8F8;
  padding: 20px 30px;
  h2 {
    color: #666;
    margin-bottom: 20px;
    font: $normal 1.8rem/2.6rem $regular;
    text-transform: uppercase;
    letter-spacing: 1px;
  }
  article {
    border-bottom: 1px solid #cecece;
    margin-bottom: 20px;
    padding-bottom: 20px;
    h4 {
      margin-bottom: 10px;
      font: $bold 1.8rem/2.8rem $regular;
    }
    p {
      margin: 0 0 10px 0;
      font: $normal 1.6rem/2.4rem $regular;
      &:last-child {
        margin: 0 !important;
      }
      &:first-child {
        color: red;
      }
    }
    a {
      font: $normal 1.6rem/2.4rem $regular;
      color: $green;
      text-decoration-color: $green;
    }
    &:last-child {
      border-bottom: none;
      margin-bottom: 10px;
      padding-bottom: 0;
    }
  }
  
}
/* ... */

